# pywxm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
examples/: example.py  pyproject.toml
src/pywxm/: __init__.py  api.py
